updated selfies section

--- a/index.html
+++ b/index.html
@@ -70,39 +70,53 @@ max-height: 50vh;
 
     <div id="Section1" class="w3-display-container w3-white w3-padding-16" style="display: none">
 
-      <div class="w3-card-4 Content1" style="overflow:hidden">
-        <img src="homepage/kid.jpg" class="w3-round" style="max-width:100%" alt="">
-        <h2 class="w3-display-bottomright w3-padding-32 w3-text-grey w3-container" style="text-shadow: 2px 2px white;">working
-          on<br>
-          the tan </h2>
+      <div class="Content1" style="background: rgba(255, 255, 255, 0.9)">
+        <div class="w3-section w3-padding-small" style="">
+          <h5 class="w3-opacity"><b>Growing up in a coastal village near Athens</b></h5>
+          <div class="w3-container w3-card w3-white w3-round w3-section">
+            <img src="homepage/kid.jpg" class="w3-round" style="max-width:100%; " alt="">
+          </div>
+        </div>
       </div>
 
-      <div class="w3-card-4 Content1" style="display: none; overflow:hidden">
-        <img src="homepage/volunteerPride.jpg" class="w3-round" style="max-width:100%" alt="">
-        <h2 class="w3-display-topleft w3-padding-32 w3-text-green w3-container" style="text-shadow: 2px 2px red;">here,
-          I am letting some Athens Pride volunteers know</h2>
-        <h2 class="w3-display-bottomright w3-padding-32 w3-text-green w3-container" style="text-shadow: 2px 2px red;">
-          the parade is not gonna wait for them</h2>
+      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+        <div class="w3-section w3-padding-small" style="">
+          <h5 class="w3-opacity"><b>In my early twenties I was deeply involved in the Greek LGBT rights movement</b></h5>
+          <div class="w3-container w3-card w3-round w3-section">
+            <img src="homepage/volunteerPride.jpg" class="w3-round" style="max-width:100%; " alt="">
+          </div>
+        </div>
       </div>
 
-      <div class="w3-card-4 Content1" style="display: none; overflow:hidden">
-        <img src="homepage/book.jpg" class="w3-round" style="max-width:100%" alt="">
-        <h5 class="w3-display-topright w3-padding-32 w3-text-grey w3-container" style="text-shadow: 2px 2px white;">..reflecting
-          upon my model career <br>how the end came before the start...</h5>
+      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+        <div class="w3-section w3-padding-small" style="">
+          <h5 class="w3-opacity"><b>When I was 25 I moved to Madrid</b></h5>
+          Inspired from my then job as fashion advisor I gave modelling a go. It didn't work out as expected<br>
+          <div class="w3-container w3-card w3-round w3-section">
+            <img src="homepage/book.jpg" class="w3-round" style="max-width:100%; " alt="">
+          </div>
+        </div>
       </div>
 
-      <div class="w3-card-4 Content1" style="display: none; overflow:hidden">
-        <img src="homepage/instaFamily.png" class="w3-round" style="max-width:100%" alt="">
-        <h5 class="w3-display-topleft w3-padding-32 w3-text-white w3-container" style="text-shadow: 2px 2px white;"><br>surviving
-          the Danish winter is
-          easy<br>with my sister and niece next door</h5>
+      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+        <div class="w3-section w3-padding-small" style="">
+          <h5 class="w3-opacity"><b>My family lives in Denmark too</b></h5>
+          Spending time with my niece is my trick for surviving the danish winter<br>
+          <div class="w3-container w3-card w3-round w3-section">
+            <img src="homepage/instaFamily.png" class="w3-round" style="max-width:100%; " alt="">
+          </div>
+        </div>
       </div>
 
-      <div class="w3-card-4 Content1" style="display: none; overflow:hidden">
-        <img src="homepage\intern.jpg" class="w3-round" style="max-width:100%" alt="">
+      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+        <div class="w3-section w3-padding-small" style="">
+          <h5 class="w3-opacity"><b>Internship portrait</b></h5>
+          I always strive to bring a smile at work, even when the deadlines are keeping us up all night<br>
+          <div class="w3-container w3-card w3-round w3-section">
+            <img src="homepage\intern.jpg" class="w3-round" style="max-width:100%; " alt="">
+          </div>
+        </div>
       </div>
-
-
 
       <!--FIRST SLIDER, controls the content of the Section1 above -->
       <br>
