opacity fix for selfie section

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@ max-height: 50vh;
   <!-- SECTION1 -->
   <div>
 
-    <div id="Section1" class="w3-display-container w3-white w3-padding-16" style="display: none">
+    <div id="Section1" class="w3-display-container w3-padding-16" style="display: none">
 
-      <div class="Content1" style="background: rgba(255, 255, 255, 0.9)">
+      <div class="Content1" style="background: rgba(255, 255, 255, 0.8)">
         <div class="w3-section w3-padding-small" style="">
           <h5 class="w3-opacity"><b>Growing up in a coastal village near Athens</b></h5>
-          <div class="w3-container w3-card w3-white w3-round w3-section">
+          <div class="w3-container w3-round w3-section">
             <img src="homepage/kid.jpg" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
@@ -82,7 +82,7 @@ max-height: 50vh;
       <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
         <div class="w3-section w3-padding-small" style="">
           <h5 class="w3-opacity"><b>In my early twenties I was deeply involved in the Greek LGBT rights movement</b></h5>
-          <div class="w3-container w3-card w3-round w3-section">
+          <div class="w3-container w3-round w3-section">
             <img src="homepage/volunteerPride.jpg" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
@@ -92,7 +92,7 @@ max-height: 50vh;
         <div class="w3-section w3-padding-small" style="">
           <h5 class="w3-opacity"><b>When I was 25 I moved to Madrid</b></h5>
           Inspired from my then job as fashion advisor I gave modelling a go. It didn't work out as expected<br>
-          <div class="w3-container w3-card w3-round w3-section">
+          <div class="w3-container w3-round w3-section">
             <img src="homepage/book.jpg" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
@@ -102,7 +102,7 @@ max-height: 50vh;
         <div class="w3-section w3-padding-small" style="">
           <h5 class="w3-opacity"><b>My family lives in Denmark too</b></h5>
           Spending time with my niece is my trick for surviving the danish winter<br>
-          <div class="w3-container w3-card w3-round w3-section">
+          <div class="w3-container w3-round w3-section">
             <img src="homepage/instaFamily.png" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
@@ -112,7 +112,7 @@ max-height: 50vh;
         <div class="w3-section w3-padding-small" style="">
           <h5 class="w3-opacity"><b>Internship portrait</b></h5>
           I always strive to bring a smile at work, even when the deadlines are keeping us up all night<br>
-          <div class="w3-container w3-card w3-round w3-section">
+          <div class="w3-container w3-round w3-section">
             <img src="homepage\intern.jpg" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
