--- a/index2.html
+++ b/index2.html
@@ -69,27 +69,27 @@ max-height: 50vh;
 
     <div id="Section1" class="w3-display-container w3-padding-16" style="display: none">
 
-      <div class="Content1" style="background: rgba(255, 255, 255, 0.8)">
+      <div class="Content1" style="background: rgb(255, 255, 255)">
         <div class="w3-section w3-padding-small" style="">
-          <h5 class="w3-opacity"><b>Growing up in a coastal village near Athens</b></h5>
+          <h5><b>Growing up in a coastal village near Athens</b></h5>
           <div class="w3-container w3-round w3-section">
             <img src="homepage/kid.jpg" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
       </div>
 
-      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+      <div class="Content1" style="display: none; background: rgb(255, 255, 255)">
         <div class="w3-section w3-padding-small" style="">
-          <h5 class="w3-opacity"><b>In my early twenties I was deeply involved in the Greek LGBT rights movement</b></h5>
+          <h5><b>In my early twenties I was deeply involved in the Greek LGBT rights movement</b></h5>
           <div class="w3-container w3-round w3-section">
             <img src="homepage/volunteerPride.jpg" class="w3-round" style="max-width:100%; " alt="">
           </div>
         </div>
       </div>
 
-      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+      <div class="Content1" style="display: none; background: rgb(255, 255, 255)">
         <div class="w3-section w3-padding-small" style="">
-          <h5 class="w3-opacity"><b>When I was 25 I moved to Madrid</b></h5>
+          <h5><b>When I was 25 I moved to Madrid</b></h5>
           Inspired from my then job as fashion advisor I gave modelling a go. It didn't work out as expected<br>
           <div class="w3-container w3-round w3-section">
             <img src="homepage/book.jpg" class="w3-round" style="max-width:100%; " alt="">
@@ -97,9 +97,9 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+      <div class="Content1" style="display: none; background: rgb(255, 255, 255)">
         <div class="w3-section w3-padding-small" style="">
-          <h5 class="w3-opacity"><b>My family lives in Denmark too</b></h5>
+          <h5><b>My family lives in Denmark too</b></h5>
           Spending time with my niece is my trick for surviving the danish winter<br>
           <div class="w3-container w3-round w3-section">
             <img src="homepage/instaFamily.png" class="w3-round" style="max-width:100%; " alt="">
@@ -107,9 +107,9 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content1" style="display: none; background: rgba(255, 255, 255, 0.9)">
+      <div class="Content1" style="display: none; background: rgb(255, 255, 255)">
         <div class="w3-section w3-padding-small" style="">
-          <h5 class="w3-opacity"><b>Internship portrait</b></h5>
+          <h5><b>Internship portrait</b></h5>
           I always strive to bring a smile at work, even when the deadlines are keeping us up all night<br>
           <div class="w3-container w3-round w3-section">
             <img src="homepage\intern.jpg" class="w3-round" style="max-width:100%; " alt="">
@@ -139,14 +139,14 @@ max-height: 50vh;
   <div class="w3-content">
     <div id="Section2" class=" w3-round" style="display: none;">
 
-      <div class="Content2" style="background: rgba(255, 255, 255, 0.9)">
-        <div class="w3-card w3-white w3-round">
+      <div class="Content2" style="background: rgb(255, 255, 255)">
+        <div class=" w3-white w3-round">
           <h2 class="w3-text-grey w3-margin w3-padding-16 w3-section">Internship <br>
             &#x1F4CD;ProjectLab KEA</h2>
         </div>
 
-        <div class="w3-container w3-white w3-card w3-round w3-section">
-          <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
                 Københavner Ture</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Oct 2018 - Nov 2018</h6>
           <p>In a multidisciplinary team, we developed an AR
@@ -156,8 +156,8 @@ max-height: 50vh;
             <hr>
         </div>
 
-        <div class="w3-container w3-white w3-card w3-round w3-section">
-          <h5 class="w3-opacity"><b>Intern / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Intern / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2018 - Oct 2018</h6>
           <p>Working with various product development tecniques, we designed and developed a VR experience for
             marketing purposes.<br>
@@ -166,14 +166,14 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content2" style="display: none; background: rgba(255, 255, 255, 0.9)">
-        <div class="w3-card w3-white w3-round w3-section">
+      <div class="Content2" style="display: none; background: rgb(255, 255, 255)">
+        <div class=" w3-white w3-round w3-section">
           <h2 class="w3-text-grey w3-margin  w3-padding-16">Student Jobs<br>
             &#x1F4CD;København</h2>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Bartender / <a href="https://www.cosybar.dk/" target="_blank">Cosy Bar</a></b></h5>
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Bartender / <a href="https://www.cosybar.dk/" target="_blank">Cosy Bar</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Old gaybar in downtown Copenhagen, cosy atmosphere.<br> I work long night shifts every other weekend, so I
             get
@@ -181,8 +181,8 @@ max-height: 50vh;
             <hr>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Head Waiter / <a href="http://asador.dk/" target="_blank">Asador</a></b></h5>
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Head Waiter / <a href="http://asador.dk/" target="_blank">Asador</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Sep 2017</h6>
           <p> Argentenian Stakehouse in Cristianshavn borrow, good meat and wine.<br> I have excellent
             relationship
@@ -191,13 +191,13 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content2" style="display: none; background: rgba(255, 255, 255, 0.9)">
-        <div class="w3-card w3-white w3-round">
+      <div class="Content2" style="display: none; background: rgb(255, 255, 255)">
+        <div class=" w3-white w3-round">
           <h2 class="w3-text-grey w3-margin  w3-padding-16 w3-section">Retail Experience<br>
             &#x1F4CD;Madrid</h2>
         </div>
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Fashion Advisor / <a href="https://www.uterque.com/dk/" target="_blank">“Uterqüe”
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Fashion Advisor / <a href="https://www.uterque.com/dk/" target="_blank">“Uterqüe”
                 Flagship Store (Inditex)</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2015 - Jun 2016</h6>
           <p>▪ Exclusive fashion advising to premium (high value) customers <br>
@@ -206,8 +206,8 @@ max-height: 50vh;
           <hr>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Sales Manager & Shift Manager / <a href="https://www.facebook.com/BovinusLuxury/"
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Sales Manager & Shift Manager / <a href="https://www.facebook.com/BovinusLuxury/"
                 target="_blank">Bovinus Luxury</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2014 - Sep 2015</h6>
           <p>▪ Management of the day-to-day operation of a premium food market stall <br>
@@ -217,13 +217,13 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content2" style="display: none; background: rgba(255, 255, 255, 0.9)">
-        <div class="w3-card w3-white w3-round">
+      <div class="Content2" style="display: none; background: rgb(255, 255, 255)">
+        <div class=" w3-white w3-round">
           <h2 class="w3-text-grey w3-margin w3-padding-16 w3-section">Volunteer Work <br>
             &#x1F4CD;Athens</h2>
         </div>
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Member of the Organizing Committee / <a href="https://www.athenspride.eu" target="_blank">Athens
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Member of the Organizing Committee / <a href="https://www.athenspride.eu" target="_blank">Athens
                 Pride</a> </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2009 - 2012</h6>
           <p>
@@ -233,8 +233,8 @@ max-height: 50vh;
           <hr>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Founding Member / <a href="https://www.colouryouth.gr" target="_blank">Colour
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5 ><b>Founding Member / <a href="https://www.colouryouth.gr" target="_blank">Colour
                 Youth,
                 LGBTQ Youth Community</a> </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> 2010 - 2012</h6>
@@ -244,8 +244,8 @@ max-height: 50vh;
           <hr>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-section">
-          <h5 class="w3-opacity"><b>Merchandising and Clothes Shop / Hellenic Red Cross </b></h5>
+        <div class="w3-container w3-white w3-round w3-section">
+          <h5><b>Merchandising and Clothes Shop / Hellenic Red Cross </b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2009 - 2011</h6>
           <p>▪ Shop manager <br>
             ▪ Market Research <br>
@@ -278,11 +278,11 @@ max-height: 50vh;
     <div id="Section3" style="display: none">
       <br>
 
-      <div class="Content3" style="background: rgba(255, 255, 255, 0.9)">
-        <div class=" w3-section w3-padding-large w3-card w3-white w3-round">
+      <div class="Content3" style="background: rgb(255, 255, 255)">
+        <div class=" w3-section w3-padding-large w3-white w3-round">
           <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png"
             alt="Avatar" class="w3-left w3-margin-right" style="width:60px">
-          <span class="w3-right w3-opacity">January 2019</span>
+          <span class="w3-right">January 2019</span>
           <h4>AR System</h4><br>
           <hr class="w3-clear">
           <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/gps-tourist-app')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
@@ -296,9 +296,9 @@ max-height: 50vh;
         </div>
 
         <div class="w3-section w3-padding-small" style="">
-          <h5 class="w3-opacity"><b>About the project</b></h5>
-          Team final project for KEA's Datamatiker AP. <br>
-          <div class="w3-container w3-card w3-white w3-round w3-section">
+          <h5 ><b>About the project</b></h5>
+          Team final project for KEA's Datamatiker AP. Grade: excellent <br>
+          <div class="w3-container w3-white w3-round w3-section">
             <img src="homepage\problem.png" class="w3-round" style="max-width:100%; " alt="">
           </div>
           <br> Together with two colleagues we combined Scrum and Design thinking for our process and developed an
@@ -307,14 +307,14 @@ max-height: 50vh;
           <br> The user harvests GPS and AR technologies through their phone and consumes content relevant to their
           location.
           <br> The system owner can add new locations and feed the application with new content. <br>
-          <div class="w3-container w3-card w3-white w3-round w3-section">
+          <div class="w3-container w3-white w3-round w3-section">
             <img src="homepage\process.png" class="w3-round" style="max-width:100%; " alt="">
             <hr class="w3-clear">
           </div>
         </div>
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>Tech Stack</b></h5>
-          <div class="w3-container w3-card w3-white w3-round w3-section">
+          <h5> <b>Tech Stack</b></h5>
+          <div class="w3-container w3-white w3-round w3-section">
             <img src="homepage\system.png" class="w3-round" style="max-width:100%;" alt=""> <br>
           </div>
           <p>▪ Android APK by Unity3D and Vuforia </p>
@@ -331,17 +331,17 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content3" style="display: none; background: rgba(255, 255, 255, 0.9);">
+      <div class="Content3" style="display: none; background: rgb(255, 255, 255);">
         <div class=" w3-section w3-padding-small">
           <img src="https://medialabamsterdam.com/toolkit/files/2016/06/DMT_logo.png" alt="Avatar" class="w3-left w3-margin-right"
             style="width:60px">
-          <span class="w3-right w3-opacity">Nov 2018</span>
+          <span class="w3-right">Nov 2018</span>
           <h4>Prototype Development</h4><br>
         </div>
         <hr class="w3-clear">
 
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>About the project</b></h5>
+          <h5> <b>About the project</b></h5>
           A multidisciplinary team of 2 multimedia designers and 2 developers. We developed an AR
           solution for this local guided-tours company.<br>
           Our goal was to "Bring Stories Alive" as well as to add a competitive advantage <br> to the company's SoMe
@@ -349,7 +349,7 @@ max-height: 50vh;
         </div>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>The process</b></h5>
+          <h5> <b>The process</b></h5>
           We went through a 4-day course on Unity 3D and 1 day on Ideation. We worked with Scrum. An experienced tutor
           guided us while practising design methods from the <a href="https://medialabamsterdam.com/toolkit/">Amsterdam
             MediaLab's Toolkit</a> .
@@ -366,11 +366,11 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content3" style="display: none; background: rgba(255, 255, 255, 0.9);">
+      <div class="Content3" style="display: none; background: rgb(255, 255, 255);">
         <div class=" w3-section w3-padding-small">
           <img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Avatar" class="w3-left w3-margin-right"
             style="width:60px">
-          <span class="w3-right w3-opacity">May 2018</span>
+          <span class="w3-right">May 2018</span>
           <h4>Simple Chat</h4><br>
         </div>
 
@@ -384,12 +384,12 @@ max-height: 50vh;
           &nbsp;chat.stefworks.ml</button>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>About the project</b></h5>
+          <h5> <b>About the project</b></h5>
           Exam project for third Semester elective Full-Stack web development with Node.js and jQuery.
         </div>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>Tech Stack</b></h5>
+          <h5> <b>Tech Stack</b></h5>
           NODE.js express app ▪ JWT based authentication ▪ socket.io ▪ kenx.js ▪ objection.js ▪ DOCKER compose
           containerization
         </div>
@@ -402,11 +402,11 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content3" style="display: none; background: rgba(255, 255, 255, 0.9);">
+      <div class="Content3" style="display: none; background: rgb(255, 255, 255);">
         <div class=" w3-section w3-padding-small">
           <img src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg" alt="Avatar" class="w3-left w3-margin-right"
             style="width:60px">
-          <span class="w3-right w3-opacity">Jun 2018</span>
+          <span class="w3-right">Jun 2018</span>
           <h4>Administration SPA</h4><br>
         </div>
 
@@ -421,13 +421,13 @@ max-height: 50vh;
           &nbsp;makeyourcv.stefworks.ml</button>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>About the project</b></h5>
+          <h5> <b>About the project</b></h5>
           Exam project for third Semester elective Front-end Development with Angular5. <br>
           Received excellent evaluation
         </div>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>Tech Stack</b></h5>
+          <h5> <b>Tech Stack</b></h5>
           Angular5 front ▪ JWT based authentication ▪ reactive forms ▪ redux <br>
           Served from a Spring Boot app ▪ Continuous Intergration with Jenkins github webhooks.
         </div>
@@ -440,11 +440,11 @@ max-height: 50vh;
         </div>
       </div>
 
-      <div class="Content3" style="display: none; background: rgba(255, 255, 255, 0.9);">
+      <div class="Content3" style="display: none; background: rgb(255, 255, 255);">
         <div class=" w3-section w3-padding-small">
           <img src="https://spring.io/img/homepage/icon-spring-cloud.svg" alt="Avatar" class="w3-left w3-margin-right"
             style="width:60px">
-          <span class="w3-right w3-opacity">Jun 2018</span>
+          <span class="w3-right">Jun 2018</span>
           <h4>Java Rest API</h4><br>
         </div>
 
@@ -455,13 +455,13 @@ max-height: 50vh;
             &nbsp;Demo </del></button>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>About the project</b></h5>
+          <h5 > <b>About the project</b></h5>
           Exam project for third Semester elective Spring Boot & Devops. <br>
           Received excellent evaluation
         </div>
         <hr class="w3-clear">
         <div class="w3-section w3-padding-small">
-          <h5 class="w3-opacity"> <b>Tech Stack</b></h5>
+          <h5> <b>Tech Stack</b></h5>
           Spring Boot back-end ▪ REST resources ▪ JWT based authentication ▪ SWAGGER ▪ H2 embedded
           database ▪ Continuous Intergration with Jenkins github webhooks
         </div>
