CHANGED PLEASE WAIT TO REDIRECTING

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       STEFWORKS
     </div>
     <div class="w3-display-middle">
-      <h1 class="w3-jumbo w3-animate-top">PLEASE WAIT</h1>
+      <h1 class="w3-jumbo w3-animate-top">REDIRECTING</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
       <p class="w3-large w3-center">coming soon, better performance & new features</p>
       <p class="w3-large w3-center">powered by React-Static and p5.js</p>
